--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ blinker==1.7.0
 click==8.1.7
 colorama==0.4.6
 Flask==3.0.0
+Flask-Mail==0.9.1
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.3
