--- a/.example.env
+++ b/.example.env
@@ -4,5 +4,5 @@ APP_PORT=5000
 
 MAIL_SERVER=smtp.gmail.com
 MAIL_PORT=465
-MAIL_USERNAME=
-MAIL_PASSWORD=
+MAIL_USERNAME= "dhanush2210530@ssn.edu.in"
+MAIL_PASSWORD= "Information*06"
